[project]
name = "takeskip"
description = "Do bit manipulations with take/skip commands"
readme = "README.md"
authors = [
    { name = "Jonathan Olsten", email = "jolsten@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "lark>=1.2",
    "numpy>=2",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/takeskip/_version.py"
